--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint ./src",
     "test": "jest --coverage",
     "test:watch": "jest --watch",
-    "build": "rm -rf dist && tsc -p tsconfig-build.json"
+    "build": "rm -rf dist && tsc -p tsconfig-build.json && node ./file-size.js"
   },
   "repository": {
     "type": "git",
@@ -21,12 +21,15 @@
   "homepage": "https://github.com/DuncanOgle/highdash#readme",
   "devDependencies": {
     "@types/jest": "^29.2.3",
+    "@types/lodash": "^4.14.190",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
+    "chalk": "^4.1.2",
     "eslint": "^8.28.0",
     "eslint-config-xo": "^0.43.1",
     "eslint-config-xo-typescript": "^0.55.0",
     "jest": "^29.3.1",
+    "lodash": "^4.17.21",
     "ts-jest": "^29.0.3",
     "typescript": "^4.9.3"
   }
