--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jest": "29.6.1",
     "lodash": "4.17.21",
     "ts-jest": "29.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "5.1.6"
   }
 }
