--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "A lightweight replacement for Lodash",
   "main": "dist/index.js",
   "scripts": {
-    "lint": "eslint ./src",
-    "test": "jest --coverage",
-    "test:watch": "jest --watch",
-    "build": "rm -rf dist && tsc -p tsconfig-build.json && node ./file-size.js"
+    "lint": "biome lint ./src",
+    "lint:fix": "biome lint --fix ./src",
+    "format": "biome format ./src",
+    "format:fix": "biome format --fix ./src",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "build": "rm -rf dist && tsc -p tsconfig-build.json && node ./file-size.js",
+    "typecheck": "tsc --noEmit"
   },
   "repository": {
     "type": "git",
@@ -20,18 +24,16 @@
   },
   "homepage": "https://github.com/DuncanOgle/highdash#readme",
   "devDependencies": {
-    "@types/jest": "29.5.4",
-    "@types/lodash": "4.14.197",
-    "@typescript-eslint/eslint-plugin": "6.5.0",
-    "@typescript-eslint/parser": "6.5.0",
+    "@biomejs/biome": "1.9.4",
+    "@types/jest": "29.5.14",
+    "@types/lodash": "4.17.13",
     "chalk": "4.1.2",
-    "eslint": "8.48.0",
-    "eslint-config-xo": "0.43.1",
-    "eslint-config-xo-typescript": "1.0.1",
-    "jest": "29.6.4",
+    "globals": "^15.14.0",
+    "jest": "29.7.0",
     "lodash": "4.17.21",
-    "ts-jest": "29.1.1",
-    "ts-node": "^10.9.1",
-    "typescript": "5.2.2"
+    "ts-jest": "29.2.5",
+    "ts-node": "^10.9.2",
+    "typescript": "5.7.2",
+    "vitest": "^2.1.8"
   }
 }
