--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint:fix": "biome lint --fix ./src",
     "format": "biome format ./src",
     "format:fix": "biome format --fix ./src",
-    "test": "vitest run",
+    "test": "vitest run --coverage",
     "test:watch": "vitest",
     "build": "rm -rf dist && tsc -p tsconfig-build.json && node ./file-size.js",
     "typecheck": "tsc --noEmit"
@@ -27,6 +27,7 @@
     "@biomejs/biome": "1.9.4",
     "@types/jest": "29.5.14",
     "@types/lodash": "4.17.13",
+    "@vitest/coverage-istanbul": "^2.1.8",
     "chalk": "4.1.2",
     "globals": "^15.14.0",
     "jest": "29.7.0",
