--- a/package.json
+++ b/package.json
@@ -25,16 +25,13 @@
   "homepage": "https://github.com/DuncanOgle/highdash#readme",
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@types/jest": "29.5.14",
     "@types/lodash": "4.17.13",
-    "@vitest/coverage-istanbul": "^2.1.8",
+    "@vitest/coverage-istanbul": "2.1.8",
     "chalk": "4.1.2",
-    "globals": "^15.14.0",
-    "jest": "29.7.0",
+    "globals": "15.14.0",
     "lodash": "4.17.21",
-    "ts-jest": "29.2.5",
-    "ts-node": "^10.9.2",
+    "ts-node": "10.9.2",
     "typescript": "5.7.2",
-    "vitest": "^2.1.8"
+    "vitest": "2.1.8"
   }
 }
